--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   ],
   "author": "Mint (yanquankun)",
   "license": "LICENSE",
-  "private": false
+  "private": false,
+  "devDependencies": {
+    "@types/react": "^19.1.0",
+    "react": "^17.0.2"
+  }
 }
