--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "前端通用http请求封装",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest --config=jest.config.ts"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,10 @@
   "license": "LICENSE",
   "private": false,
   "devDependencies": {
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.1.0",
+    "jest": "^29.7.0",
     "react": "^17.0.2",
     "typescript": "^5.0.0"
   }
