--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/react": "^19.1.0",
     "jest": "^29.7.0",
     "react": "^17.0.2",
+    "ts-jest": "^29.3.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.0"
   }
 }
