--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,7 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["request/**/*.ts", "__tests__/**/*.ts"],
+  "exclude": ["node_modules", "dist", "jest.config.ts"]
 }
