feat: scripts ts support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,5 @@
 {
-  "compilerOptions": {
-    /* Visit https://aka.ms/tsconfig to read more about this file */
-    "incremental": true,
-    "target": "es2016",
-    "module": "ESNext",
-    "typeRoots": ["./node_modules/@types"],
-    "types": ["jest"],
-    "declaration": true,
-    "outDir": "./http-request",
-    "removeComments": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "strict": true,
-    "skipLibCheck": true
-  },
-  "include": ["request/**/*.ts", "__tests__/**/*.ts"],
-  "exclude": ["node_modules", "dist", "jest.config.ts"]
+  "extends": "./tsconfig.base.json",
+  "include": ["request/**/*.ts", "__tests__/**/*.ts", "scripts/**/*.ts"],
+  "exclude": ["jest.config.ts"]
 }
