--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "test": "jest --config=jest.config.ts",
-    "publishCI": "node ./scripts/publish.ts"
+    "publishCI": "ts-node scripts/publish.ts"
   },
   "repository": {
     "type": "git",
@@ -30,11 +30,15 @@
   "devDependencies": {
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.0",
     "@types/react": "^19.1.0",
     "jest": "^29.7.0",
     "react": "^17.0.2",
     "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "tslib": "^2.8.1"
   }
 }
