--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,11 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.base.json",
   "include": ["request/**/*.ts"],
-  "exclude": ["node_modules", "dist", "__tests__"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "__tests__",
+    "scripts/**/*.ts",
+    "jest.config.ts"
+  ]
 }
